# sky-story

./: CMakeLists.txt  README.txt
src/: skystory.cpp
